--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
     "@auth0/angular-jwt": "^5.0.1",
+    "angular-material-fileupload": "^3.0.1",
     "bootstrap": "^4.5.2",
     "core-js": "^2.5.4",
+    "ngx-material-file-input": "^2.1.1",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.26"
   },
