--- a/.prettierrc
+++ b/.prettierrc
@@ -2,5 +2,6 @@
     "semi": true,
     "singleQuote": true,
     "printWidth": 80,
-    "bracketSpacing": true
+    "bracketSpacing": true,
+    "trailingComma": "all"
 }
