--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "prettier": "prettier src/app/modules/profile/*.ts",
+    "prettier-write": "prettier --write src/app/modules/profile/*.*"
   },
   "private": true,
   "dependencies": {
